--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Combine other colleges to reach the <span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>MIT!</strong></span></p>
+    <p class="game-intro">Combine other teachers to reach the <span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>MIT-Headmaster!</strong></span></p>
 
     <div class="game-container">
       <div class="game-message">
@@ -66,12 +66,12 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same college touch, they <strong>merge into one!</strong>
-      <br><strong class="important">Note:</strong> The order of colleges is not intended to be a ranking (boo), but a rough west-to-east geographical path to MIT.
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same teacher touch, they <strong>merge into one!</strong>
+      <br><strong class="important">Note:</strong> The order of colleges is not intended to be a ranking (boo), but a rough west-to-east geographical path to MIT-Headmaster.
     </p>
     <hr>
     <p>
-    Created by <a href="http://web.mit.edu/mitchgu/www">Mitchell Gu</a>. Inspired by <a href="http://naveenarun.github.io/GetCaltech/">Get Caltech by Naveen Arun</a>. Based on <a href="http://gabrielecirulli.com" target="_blank">2048 by Gabriele Cirulli.</a> and <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href="http://www.y-r-t.com">Ruotian Yang</a>. Inspired by <a href="http://naveenarun.github.io/GetCaltech/">Get Caltech by Naveen Arun</a>. Based on <a href="http://gabrielecirulli.com" target="_blank">2048 by Gabriele Cirulli.</a> and <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
     <hr>
     <p>
